src/main/java/com/example/demo/common/error/CustomErrorCode.java
package com.example.demo.common.error;

public enum CustomErrorCode {
    DUPLICATED_MEMBER_SERVICE_ID,
    DUPLICATED_MEMBER_NICKNAME,
    SERVER_INTERNAL_ERROR,
    NOT_FOUND_MEMBER,
    INVALID_CLIENT_REQUEST_BODY,
    INVALID_TOKEN_EXCEPTION,
    REQUEST_WITH_BLACK_LIST_TOKEN,
    NOT_FOUND_DATA_IN_REQUEST,
    NOT_FOUND_WORLD_CUP_GAME,
    EXPIRED_REMEMBER_ME
}